# touhou10

./: .gitattributes  README.md  touhou10.sln
blender/: pcb_youmu_stairs.blend
godot-project/: anim_exporter.gd  boss_cirno_portrait.png.import  boss_spellcard_anim.gd  boss_spellcard_anim.tscn  icon.svg.import  project.godot  screenshot_full.png.import  screenshot_play_area.png.import  spell_card_attack_anim_label.png.import  white.png.import
tools/: build.sh  tools.vcxproj  tools.vcxproj.filters
tools/src/: create_fonts.cpp  create_package.cpp  create_texture_atlas.cpp  tools.cpp  tools.h
touhou10/: .gitignore  CMakeLists.txt  TODO.txt  build.sh  build_web.bat  env.txt  resource.h  touhou10.aps  touhou10.vcxproj  touhou10.vcxproj.filters
touhou10/fonts/: cirno.fnt  consolas_bold.fnt  indigo_hunter.fnt  indigo_hunter_readme.txt
touhou10/shaders/: 3d.frag  3d.glsl  3d.vert  basic_3d.frag  basic_3d.vert  color.frag  color.glsl  heat_haze.frag  include.glsl  misty_lake.glsl  sharp_bilinear.frag  sharp_bilinear.glsl  stage0_bg.frag  stage0_bg.vert  stage_0_bg.frag  stage_0_bg.vert  texture.frag  texture.glsl  texture.vert
touhou10/src/: anim_data_boss_spellcard_anim.cpp  animation.cpp  animation.h  arena.cpp  arena.h  array.h  assets.cpp  assets.h  boss.cpp  boss_and_stage_data.cpp  boss_data_cirno.h  boss_data_daiyousei.h  boss_data_youmu.h  character_data.cpp  character_data_reimu.h  common.h  config.h  console.cpp  console.h  cpml.h  font.cpp  font.h  font_data.cpp  game.cpp  game.h  input.cpp  input.h  main.cpp  menu.cpp  menu.h  objects.cpp  objects.h  package.cpp  package.h  particle_system.cpp  particle_system.h  player.cpp  renderer.cpp  renderer.h  scripting.h  (+25 more)
touhou10/textures/: atlas_0.qoi  background.qoi  cirno_spellcard_background.qoi  stage_0_bg.qoi
